--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "api-one",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://nataliiadanchenko.github.io",
+  "homepage": "https://nataliiadanchenko.github.io/NASA_API",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.17.0",
