--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint -c .eslintrc.js --ext .js",
+    "lint:fix": "npm run lint -- --fix",
+    "lint:watch": "esw .eslintrc.js --ext .js -w"
   },
   "eslintConfig": {
     "extends": [
@@ -43,6 +46,9 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^8.56.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-watch": "^8.0.0",
     "gh-pages": "^6.1.0",
     "tailwindcss": "^3.3.6"
   }
